--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-promise": ">=4.0.1",
     "eslint-plugin-standard": ">=4.0.0",
     "eslint-plugin-vue": "^5.2.2",
+    "highlight.js": "^9.15.8",
     "marked": "^0.6.3",
     "node-sass": "^4.12.0",
     "nodemon": "^1.18.9",
