--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/pwa": "^3.0.0-beta.16",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
