--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "deploy": "npm run generate && git subtree push --prefix dist origin gh-pages"
   },
   "dependencies": {
     "@nuxtjs/pwa": "^3.0.0-beta.16",
@@ -38,5 +39,8 @@
     "nodemon": "^1.18.9",
     "prettier": "^1.16.4",
     "sass-loader": "^7.1.0"
+  },
+  "engines": {
+    "npm": ">=10.15.3"
   }
 }
